# interCraft

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  index.admin.html  index.html  lessons-learned.md  lessons_learned_039.md  main-log.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  monitor_qr.py  pyproject.toml  pytest.ini  ruff.toml  run.py  run_agent.py  run_uvicorn.py
backend/app/: __init__.py  main.py
backend/app/agents/: README.md  __init__.py  base.py  checkpointer.py  checkpointer_controls.py  checkpointer_pool.py  exceptions.py  llm_client.py  llm_client_mock.py  personal.py  reconnect.py  token_estimator.py
backend/app/api/: __init__.py  deps.py
backend/app/audit/: __init__.py  ai_message_repo.py  reconcile.py
backend/app/channels/: __init__.py  circuit_breaker.py  consumer_lease.py  durable_inbox.py  ilink_client.py  ilink_pool.py  ilink_probe.py  ilink_utils.py  message_handler.py
backend/app/cli/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  crypto.py  db.py  exceptions.py  ids.py  logging.py  metrics.py  middleware.py  migration_runner.py  rate_limit.py  redis.py  security.py  ws.py  ws_events.py
backend/app/domain/: __init__.py  base.py  enums.py  interview_report.py  mixins.py  pagination.py  rls.py
backend/app/eval/: README.md  __init__.py  analyze_prompt_ab.py  artifacts.py  calibration.py  capability_registry.py  checker.py  cli.py  cli_contracts.py  experiment_compare.py  export_policy.py  golden_loader.py  judge.py  langsmith_sync.py  online_sampler.py  prompt_fingerprint.py  prompt_proposals.py  prompts_ab.py  report.py  run_prompt_ab.py  runner.py  schemas.py
backend/app/middleware/: __init__.py  trace_id.py
backend/app/modules/: __init__.py
backend/app/observability/: README.md  __init__.py  ai_slos.py  error_hash.py  langsmith.py  tracing.py
backend/app/repositories/: __init__.py  base.py  interview_report_repo.py
backend/app/scripts/: __init__.py  cleanup_resume_data.py
backend/app/services/: __init__.py  error_coach_service.py  resume_optimize_service.py
backend/app/tests/: __init__.py
backend/app/workers/: __init__.py  embedding_worker.py  main.py
backend/migrations/: 002_add_style_preference.sql  env.py
backend/migrations/versions/: 0001_initial.py  0002_phase2_entities.py  0003_phase3_lock_audit.py  0004_phase4_agent.py  0005_phase6_global_capabilities.py  0006_user_profile_bio.py  0007_ability_profile.py  0008_user_avatar.py  0009_019_job_fields.py  0010_019_interview_job_id.py  0011_019_error_source_question_id.py  0012_022_error_questions_compound_index.py  0012_039_bridge.py  0013_024_jobs_offer_fields.py  0013_039_bridge.py  0014_024_drop_error_questions_archived_at.py  0014_039_bridge.py  0015_024_drop_pin_profile_views.py  0015_039_bridge.py  0016_025_interview_plan.py  0016_039_bridge.py  0017_027_resume_theme.py  0018_agent_memory.py  0019_027_resume_avatar.py  0020_irt_item_bank.py  0021_a2a_messages.py  0022_032_resumes_v2.py  0022_039_log_center.py  0023_032_resumes_v2_owner_lookup.py  0024_033_eval_pm_dashboard.py  0025_035_admin_observability.py  0026_036_cleanup_resume_data.py  0027_021_eq_arch.py  0028_interview_mode_split.py  0029_error_questions_embedding.py  0030_analytics_events.py  0031_050_drop_auth_sessions_device_id_unique.py  0032_051_is_admin.py  0033_interview_branch_id_v2_resume.py  0034_052_agent_tables.py  (+18 more)
backend/scripts/: _cleanup_stale.py  _seed_demo_data.py  assert_analytics_pii_free.py  backfill_embeddings.py  backfill_report_questions.py  check_structured_coverage.py  check_structured_exclusions.py  dbq.py  dbq_user.py  demo_v2_real_llm.py  diag_resume.py  eval_drill_accuracy.py  irt_estimate_theta.py  reset_db.py  seed.py  test_card_file_size.py  verify_soft_delete.py
backend/tests/: __init__.py  conftest.py  conftest_export_stub.py  manual_e2e_bootstrap.py  test_category_no_alias.py  test_mock_shares_structured_api.py  test_pdf_renderer_html.py  test_structured_error_classification.py
backend/tests/contract/: test_033_badcase_contract.py  test_033_event_metric_schema.py  test_033_pm_dashboard_contract.py  test_033_redaction_cli_contract.py  test_035_admin_console_contract.py  test_035_eval_center_contract.py  test_035_trace_explorer_contract.py  test_039_admin_observability_contract.py  test_044_ai_operations.py  test_044_decision_signals.py  test_044_governance.py  test_044_incidents.py  test_044_product_analytics.py  test_044_review_snapshots.py  test_044_saved_views.py  test_045_ai_ops_compare_api.py  test_045_badcase_promotion_api.py  test_045_badcase_promotion_cli.py  test_045_eval_report_schema.py  test_045_eval_run_cli.py  test_045_experiment_compare_cli.py  test_045_export_audit_cli.py  test_045_judge_cli.py  test_045_llm_ops_cli_contract.py  test_045_llm_ops_migrations.py  test_045_prompt_proposal_api.py  test_045_prompt_proposal_cli.py  test_061_badcase_management_api.py  test_agents_api.py  test_auth_api.py  test_blocks_api.py  test_dashboard_summary_schema.py  test_health.py  test_interview_mode_contract.py  test_lock_api.py  test_openapi_schema.py  test_outbox_api.py  test_resume_branches_api.py  test_resume_export_api.py  (+3 more)
(+2714 files in other folders)
