[project]
name = "intercraft-backend"
version = "0.1.0"
description = "InterCraft — 面试工坊 backend (FastAPI + SQLAlchemy 2.0 async + RLS)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "InterCraft Team" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.30,<0.33",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.1,<25.0",
    "fastapi-users[sqlalchemy]>=14.0,<15.0",
    "PyJWT[cryptography]>=2.9,<3.0",
    "cryptography>=42,<44",
    "bcrypt>=4.2,<5.0",
    "arq>=0.25,<0.27",
    "redis>=5.0,<6.0",
    "jsonpatch>=1.33,<2.0",
    "fractional-indexing>=0.1,<1.0",
    "httpx>=0.27,<0.29",
    "typer>=0.12,<0.14",
    "python-multipart>=0.0.9",
    "email-validator>=2.0,<3.0",
    "prometheus-client>=0.20,<1.0",
    "langgraph>=0.2,<0.4",
    "openai>=1.0,<2.0",
    "langgraph-checkpoint-postgres>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5,<6",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "freezegun>=1.5,<2.0",
]

[project.scripts]
intercraft = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N801"]
"**/tests/*" = ["B011", "N801"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests", "app"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests (need DB/Redis)",
    "contract: API contract tests",
    "unit: pure unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
